Update controller for external-endpoint-collector